<?xml version="1.0"?>
<package>
    <name>ahrs</name>
    <version>0.0.1</version>
    <description>The ahrs package</description>

    <maintainer email="luk.mitka@gmail.com">Łukasz Mitka</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

</package>